AW SafeBrowsing: use a more clear way to indicate whether a request is cancelled by SafeBrowsing.

Bug: 761092
Change-Id: I6c67c273de967b7cdfa02ffdfe38766218ba1d2d
Reviewed-on: https://chromium-review.googlesource.com/646747
Commit-Queue: Yuzhu Shen <yzshen@chromium.org>
Reviewed-by: Selim Gurun <sgurun@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499015}
Former-commit-id: 1bb294762c2aebc7c458fa08821120c4242a03bc